<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_config_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_configuration"
        android:textAppearance="@style/HeaderTextAppearance" />

    <TextView
        android:id="@+id/widget_config_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_config_intro" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline"
        tools:listitem="@layout/item_widget_config_room" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline"
        android:text="@string/cancel" />
</LinearLayout>