<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_home_root">

    <TextView
        android:id="@+id/label_heading"
        android:textAppearance="@style/HeaderTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_heading" />

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_intro" />

    <TextView
        android:id="@+id/text_why_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="@dimen/why_login_text_height"
        android:gravity="bottom"
        android:text="@string/why_login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/ButtonStyleEmphasized"/>

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="@dimen/why_login_text_height"
        android:gravity="bottom"
        android:visibility="gone"
        tools:text="Welcome, John!" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="@style/ButtonStyle"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_room_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_home_room" />
</LinearLayout>