<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/keyline"
    android:layout_marginRight="@dimen/keyline"
    android:layout_marginEnd="@dimen/keyline"
    android:layout_marginStart="@dimen/keyline"
    android:layout_marginTop="@dimen/keyline"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline"
        android:text="@string/intro_ask_question"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

    <EditText
        android:id="@+id/field_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_question"
        android:inputType="textMultiLine" />

    <Switch
        android:id="@+id/switch_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_your_name" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_question"
        style="@style/ButtonStyle"/>
</LinearLayout>